# netium

./: Cargo.toml  LICENSE  README.md
examples/: client.json  server.json
src/: client.json  config.rs  error.rs  lib.rs  main.rs
src/app/: dispatcher.rs  metrics.rs  mod.rs  pipeline.rs  runtime.rs  stack.rs  stats_api.rs
src/common/: address.rs  metadata.rs  mod.rs  pipe.rs  stream.rs
src/crypto/: aead.rs  key_exchange.rs  mod.rs
src/geoip/: mod.rs
src/geosite/: matcher.rs  mod.rs
src/protocol/: blackhole.rs  direct.rs  http.rs  mod.rs  reject.rs  socks5.rs
src/protocol/vmess/: aead.rs  client.rs  mod.rs  server.rs  stream.rs
src/router/: mod.rs  rule_router.rs
src/session/: mod.rs  plain.rs  tls.rs  tls_websocket.rs  websocket.rs
src/transport/: mod.rs  null.rs  pool.rs  tcp.rs  tls.rs  udp.rs  websocket.rs
