[package]
name = "netium"
version = "0.1.0"
edition = "2021"
description = "A modern VPN/proxy tool inspired by V2Ray"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Cryptography
ring = "0.17"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
aes = "0.8"
rand = "0.8"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
sha2 = "0.10"
sha3 = "0.10"
hkdf = "0.12"
hmac = "0.12"
md5 = "0.7"
crc32fast = "1.3"

# Networking
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tokio-native-tls = "0.3"
tokio-rustls = "0.26"
rustls = "0.23"
webpki-roots = "0.26"
socket2 = "0.5"
ipnet = "2.9"
regex = "1.10"
http = "1.0"
geosite-rs = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
base64 = "0.21"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
thiserror = "1.0"
anyhow = "1.0"
bytes = "1.5"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
bitflags = "2.4"
rustls-pemfile = "2.2.0"
lru = "0.12"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
